# AsyncEFSPurge

./: .dockerignore  .gitignore  APPROACH_COMPARISON.md  BUG_FIXES_SUMMARY.md  CHANGELOG.md  CONCURRENCY_TUNING.md  CONTRIBUTING.md  DESIGN_PRESERVATION_VERIFICATION.md  Dockerfile  EDGE_CASES.md  EMPTY_DIRS_BUG_ANALYSIS.md  EMPTY_DIRS_FEATURE.md  FEATURE_IDEAS.md  LICENSE  LOG_ANALYSIS.md  MEMORY_SAFETY.md  OOM_ANALYSIS.md  PERFORMANCE.md  PRODUCTION_LOG_ANALYSIS.md  PRODUCTION_READINESS_ASSESSMENT.md  PRODUCTION_SAFETY.md  PROGRESS_LOGGING.md  PUBLISHING.md  QUICKSTART_GHCR.md  README.md  REVIEW_SUMMARY.md  SCALABILITY_IMPROVEMENTS.md  SEMAPHORE_BATCHING_DESIGN.md  SETUP_COMPLETE.md  SLIDING_WINDOW_ANALYSIS.md  STUCK_LOOP_FIX.md  SUBDIR_CONCURRENCY_FIX.md  TESTING.md  docker-compose.yml  k8s-cronjob.yaml  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  docker.yml
examples/: docker-test.sh  local-test.sh
scripts/: pre-release-test.sh  publish-first-release.sh  safety-test.sh  test-progress-logging.sh  test-streaming.sh
src/efspurge/: __init__.py  cli.py  logging.py  purger.py
tests/: README.md  conftest.py  test_basic.py  test_concurrent_empty_dir_removal.py  test_edge_cases.py  test_empty_dirs.py  test_empty_dirs_memory.py  test_empty_dirs_performance.py  test_empty_dirs_race_conditions.py  test_integration.py  test_logging.py  test_overall_rate_calculation.py  test_progress_output.py  test_rate_limit.py  test_rate_metrics.py  test_scandir_diagnostics.py  test_sliding_window.py  test_subdir_concurrency.py
